Display Background Text Spillover Corrected

--- a/style.css
+++ b/style.css
@@ -31,6 +31,12 @@ body {
     margin: 20px 0;
     background: rgba(0, 0, 0, 0.7);
     padding: 20px 20px;
+    word-wrap: break-word; /*Used ChatGPT to get the word-wrap and overflow elements*/
+    overflow: hidden;
+}
+
+.container2 h2 {
+    max width: 100%; 
 }
 
 #headerImg{
@@ -60,9 +66,9 @@ body {
     padding: 0 20px; 
 }
 
-.display {
+.display1 {
     display: flex; 
-    flex-direction: column;
+    flex-direction: column; 
     flex: 1;
     color: white; 
     padding: 0 20px; 
